<resources>
    <string name="app_name">Moodle Plus</string>
    <string name="action_settings">Settings</string>


    <!-- Strings related to login -->
    <string name="prompt_email">USERNAME</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="reset">RESET</string>
    <string name="fp">forgot password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_courses">Courses</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_my__courses">My_Courses</string>

    <string name="title_activity_my__calendar">My_Calendar</string>
    <string name="subapp_name">calendar</string>
    <string name="calendar">Calendar</string>
    <string name="new_message_notification_title_template" />
    <string name="new_message_notification_placeholder_text_template" />
    <string name="title_activity_grades">Grades</string>
    <string name="title_activity_threads">Threads</string>

    <!-- Strings related to menu -->
    <string name="general">General</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="myCourses">My Courses</string>
    <string name="allGrades">All Grades</string>
    <string name="pSettings">Personal Settings</string>
    <string name="myProfile">My Profile</string>
    <string name="Password">Password</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="title_activity_all_grades">AllGrades</string>


    <!-- strings related to profile -->
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="EntryNo">Entry No.</string>
    <string name="UserID">User ID</string>
    <string name="UserName">User Name</string>
    <string name="Email">Email Address</string>
    <string name="Type">Type</string>
</resources>
