<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/general">
        <menu>
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/home" />
        <item
            android:id="@+id/notifications"
            android:icon="@drawable/ic_dialog_alert"
            android:title="@string/notifications" />
        <item
            android:id="@+id/my_courses"
            android:icon="@drawable/ic_menu_sort_by_size"
            android:title="@string/myCourses" />
        <item
            android:id="@+id/all_grades"
            android:icon="@drawable/ic_menu_sort_by_size"
            android:title="@string/allGrades" />

        </menu>

    </item>
    <!--
    <item android:title="Courses">
        <menu>
            <item
                android:id="@+id/assignment"
                android:icon="@drawable/ic_menu_edit"
                android:title="Assignments" />
            <item
                android:id="@+id/resources"
                android:icon="@drawable/ic_menu_agenda"
                android:title="Resources" />
            <item
                android:id="@+id/threads"
                android:icon="@drawable/ic_menu_manage"
                android:title="Threads" />
            <item
                android:id="@+id/grades"
                android:icon="@drawable/ic_menu_info_details"
                android:title="Grades" />

            <item
                android:id="@+id/calendar"
                android:icon="@drawable/ic_menu_my_calendar"
                android:title="Calendar" />
            <item
                android:id="@+id/search"
                android:icon="@drawable/ic_menu_search"
                android:title="Search" />

        </menu>
    </item>




    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->
    <item android:title="@string/pSettings">
        <menu>
            <item
                android:id="@+id/my_profile"
                android:icon="@drawable/ic_menu_view"
                android:title="@string/myProfile" />
            <item
                android:id="@+id/password"
                android:icon="@drawable/ic_secure"
                android:title="@string/Password" />
            <!--
            <item
                android:id="@id/logout"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/logout"/>-->
        </menu>
    </item>

    <item android:title="@string/help">
        <menu>
            <item
                android:id="@+id/help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/help" />
        </menu>
    </item>

</menu>
